--- a/pamyt/main/templates/main/index.html
+++ b/pamyt/main/templates/main/index.html
@@ -1,13 +1,25 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 
 {% block content %}
 <div class="features">
-    <h1>Главная страница</h1>
+    <h1>{{ title }}</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis consequatur fugiat illo impedit inventore itaque nostrum perferendis perspiciatis quidem?</p>
     <button class="btn btn-warning">На страницу про нас</button>
+
+    {% for el in values %}
+    {% if el == 'Hello' %}
+
+    <p>{{ el|upper }}</p>
+
+    {% endif %}
+    {% endfor %}
+
+    {% for el in obj %}
+    <p>{{ el }}</p>
+    {% endfor %}
 </div>
 
 
