--- a/pamyt/main/templates/main/layout.html
+++ b/pamyt/main/templates/main/layout.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/main.css' %}">
 </head>
 <body>
 <aside>
@@ -19,7 +20,9 @@
     <ul>
         <a href="{% url 'home'%}"><li><i class="bi bi-house"></i>Главная</li></a>
         <a href="{% url 'about'%}"><li><i class="bi bi-house"></i>Про нас</li></a>
+        <a href="{% url 'news_home'%}"><li><i class="bi bi-house"></i>Новости</li></a>
         <a href="#"><li><i class="bi bi-instagram"></i>Контакты</li></a>
+        <a href="{% url 'create' %}"><li><button class="btn btn-info"><i class="fas fa-plus-circle"></i>Добавить запись</button></li></a>
     </ul>
 
 </aside>
